RESOLVED FIXED48677
vertexAttribPointer should generate INVALID_VALUE if the stride exceeds 255
https://bugs.webkit.org/show_bug.cgi?id=48677
Summary vertexAttribPointer should generate INVALID_VALUE if the stride exceeds 255
Zhenyao Mo
Reported 2010-10-29 14:20:40 PDT
WebGL spec: 6.6 Vertex Attribute Data Stride The WebGL API supports vertex attribute data strides up to 255 bytes. A call to vertexAttribPointer will generate an INVALID_VALUE error if the value for the stride parameter exceeds 255.
Attachments
patch (4.93 KB, patch)
2010-11-01 15:42 PDT, Zhenyao Mo
kling: review+
zmo: commit-queue-
Zhenyao Mo
Comment 1 2010-11-01 15:42:47 PDT
Created attachment 72576 [details] patch Test synched with khronos.
Andreas Kling
Comment 2 2010-11-01 17:10:27 PDT
Comment on attachment 72576 [details] patch r=me
Zhenyao Mo
Comment 3 2010-11-02 09:44:51 PDT
Note You need to log in before you can comment on or make changes to this bug.