2010-11-01  Zhenyao Mo  <zmo@google.com>

Reviewed by Andreas Kling.

        vertexAttribPointer should generate INVALID_VALUE if the stride exceeds 255
        https://bugs.webkit.org/show_bug.cgi?id=48677

        Test: fast/canvas/webgl/gl-vertexattribpointer.html

        * html/canvas/WebGLRenderingContext.cpp:
        (WebCore::WebGLRenderingContext::vertexAttribPointer): Generate INVALID_VALUE if stride > 255.
2010-11-01  Zhenyao Mo  <zmo@google.com>

        Reviewed by Andreas Kling.

        vertexAttribPointer should generate INVALID_VALUE if the stride exceeds 255
        https://bugs.webkit.org/show_bug.cgi?id=48677

        * fast/canvas/webgl/gl-vertexattribpointer-expected.txt: Added.
        * fast/canvas/webgl/gl-vertexattribpointer.html: Added.


Canonical link: https://commits.webkit.org/61619@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71123 268f45cc-cd09-0410-ab3c-d52691b4dbfc